# flat

./: Cargo.toml  README.md  render_graph_syntax.txt
res/: test.wgsl
src/: asset.rs  camera.rs  core_2d.rs  hierarchy.rs  lib.rs  main.rs  misc.rs  shaders.rs  texture.rs  transform.rs  util.rs
src/core_pipeline/: bind.rs  mod.rs
src/legacy/: bind.rs  pipeline.rs
src/mesh3d/: bind.rs  bundle.rs  mesh_texarr.wgsl  mod.rs
src/render/: camera.rs  color.rs  command.rs  mod.rs  system.rs  texture.rs  transform.rs  uniform.rs
src/render/camera/: component.rs  mod.rs
src/render/mesh/: extend.rs  mod.rs  primitive.rs
src/render/mesh/primitive/: cube.rs  mod.rs  quad.rs  triangle.rs
src/render/resource/: bind.rs  buffer.rs  component_uniform.rs  mod.rs  pipeline.rs  renderer.rs  shader.rs  specialized_pipeline.rs  uniform.rs
src/render/texture/: mod.rs  texture_arr.rs
src/render/view/: mod.rs  window.rs
src/shapes/: skybox.rs
src/sprite/: bind.rs  bundle.rs  circle.wgsl  mod.rs  sprite.wgsl  triangle.wgsl
src/text/: mesh.rs  mod.rs
src/window/: events.rs  mod.rs  raw_window_handle.rs  runner.rs
