[package]
name = "flat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
default-features = false
features = [
    # Bevy Crates
    "bevy_asset",
    "bevy_winit",

    # Render
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",

    # Image Formats
    "jpeg",
    "png",
    "hdr",

    "x11",
    
    "filesystem_watcher",

    "trace",
    "wgpu_trace",
]

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[dependencies]
wgpu = "0.14.0" # "0.13.1"
winit = "0.27.4" # "0.26.1"
raw-window-handle = "0.5.0" # "0.4.2"
bytemuck = { version = "1.4", features = [ "derive" ] }

bitflags = "1.3.2"
# float-ord = "0.3.2"
# repr-trait = "1.0.0"
# smallvec = "1.10.0"

# futures-lite = "1.12.0"

# ahash = "0.7.6"
const_format = "0.2.26"
# tobj = "3.2.1"
freetype-rs = "0.26.0" # "0.31.0"
anyhow = "1.0"
bluenoise = "0.2.1"
rand_pcg = "0.3.1"
gif = "0.11.4"

# log = "0.4.17"
# env_logger = "0.9.0"
